# Briar

./: Cargo.toml  colour_pallet
src/: lib.rs  main.rs  prelude.rs
src/assets/: mod.rs
src/engine/: assets.rs
src/engine/state/: mod.rs
src/engine/ui/: game.rs  main_menu.rs
src/ingame/: mod.rs  ui.rs
src/ingame/image/: mod.rs
src/ingame/location/: mod.rs  wildlands.rs
src/ingame/story/: dialogue_library.rs  mod.rs
src/loading/: mod.rs
src/mainmenu/: mod.rs  ui.rs
src/state/: assets.rs  colours.rs  mod.rs
src/state/common/: mod.rs
src/state/ingame/: mod.rs  ui.rs
src/state/ingame/image/: mod.rs
src/state/ingame/location/: mod.rs  mountain.rs
src/state/ingame/location/mountain/: mansion.rs  mod.rs
src/state/ingame/story/: dialogue_library.rs  mod.rs  prose.rs  style.rs
src/state/loading/: mod.rs
src/state/mainmenu/: mod.rs  ui.rs
