[package]
name = "rust-attempt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
bevy_asset_loader = "0.16.0"
bevy_splash_screen = "0.3.0"
bevy_tweening = "0.7.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
